--- a/src/app/change-password/change-password.page.html
+++ b/src/app/change-password/change-password.page.html
@@ -5,7 +5,7 @@
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Change Password</ion-title>
+        <ion-title mode="ios">Changer de mot de passe</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -17,8 +17,8 @@
             <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">New Password</div>
-            <ion-input type="" placeholder="Enter New Password"></ion-input>
+            <div class="name">Ancien mot de passe</div>
+            <ion-input type="password" placeholder="Mot de passe actuel" required [(ngModel)]="password"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -26,9 +26,18 @@
             <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
         </div>
         <ion-label>
-            <div class="name">Confirm Password</div>
-            <ion-input type="" placeholder="Re-Enter Password"></ion-input>
+            <div class="name">Nouveau mot de passe</div>
+            <ion-input type="password" placeholder="Nouveau mot de passe" required [(ngModel)]="newPassword"></ion-input>
         </ion-label>
     </ion-item>
-    <ion-button expand="full" (click)="goNext()">Change Password</ion-button>
+    <ion-item lines="none">
+        <div slot="start">
+            <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
+        </div>
+        <ion-label>
+            <div class="name">Confirmer le nouveau mot de passe</div>
+            <ion-input type="password" placeholder="Confirmer le nouveau mot de passe" required  [(ngModel)]="confirmPassword"></ion-input>
+        </ion-label>
+    </ion-item>
+    <ion-button expand="full" (click)="changePass()">Changer de mot de passe</ion-button>
 </ion-content>
