--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -19,7 +19,7 @@
         <ion-label>
             <div class="name">Email</div>
             <div class="">
-                <ion-input type="" placeholder="Votre email"></ion-input>
+                <ion-input [(ngModel)]="mail" type="mail" placeholder="Votre email"></ion-input>
             </div>
         </ion-label>
     </ion-item>
