--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -15,7 +15,7 @@
         </div>
         <ion-label>
             <div class="name">Nom complet</div>
-            <ion-input type="text" value="Amelia Addison" placeholder="Votre nom complet"></ion-input>
+            <ion-input type="text" placeholder="Votre nom complet" [(ngModel)]="name"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -24,7 +24,7 @@
         </div>
         <ion-label>
             <div class="name">Email</div>
-            <ion-input type="email" value="Ameliaaddison112@gmail.com" placeholder="Votre Email"></ion-input>
+            <ion-input type="email" placeholder="Votre Email" [(ngModel)]="email"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -35,32 +35,16 @@
             <div class="name">Civilité</div>
             <ion-row class="ion-padding-top">
                 <ion-col size="4" class="ion-no-padding"> <label class="container">M
-                        <input type="radio" name="radio">
+                        <input *ngIf="isSexe('Homme')" checked="checked" type="radio" name="radio">
+                        <input *ngIf="!isSexe('Homme')" type="radio" name="radio">
                         <span class="checkmark"></span>
                     </label></ion-col>
                 <ion-col size="4" class="ion-no-padding"> <label class="container">F
-                        <input type="radio" checked="checked" name="radio">
+                        <input type="radio" *ngIf="isSexe('Femme')" checked="checked" name="radio">
+                        <input type="radio" *ngIf="!isSexe('Femme')" name="radio">
                         <span class="checkmark"></span>
                     </label></ion-col>
             </ion-row>
-        </ion-label>
-    </ion-item>
-    <ion-item lines="none">
-        <div slot="start">
-            <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
-        </div>
-        <ion-label>
-            <div class="name">Mot de passe</div>
-            <ion-input type="password" value="********" placeholder="Tapez votre mot de passe"></ion-input>
-        </ion-label>
-    </ion-item>
-    <ion-item lines="none">
-        <div slot="start">
-            <img class="" src="../../assets/images/padlock.svg" height="32px" width="32px">
-        </div>
-        <ion-label>
-            <div class="name">Confirmer mot de passe</div>
-            <ion-input type="password" value="********" placeholder="Retaper le mot de passe"></ion-input>
         </ion-label>
     </ion-item>
     <ion-item lines="none">
@@ -69,10 +53,10 @@
         </div>
         <ion-label>
             <div class="name">Tel.</div>
-            <ion-input type="number" value="0694345678" placeholder="0694******"></ion-input>
+            <ion-input type="number"  [(ngModel)]="phone"></ion-input>
         </ion-label>
     </ion-item>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-button expand="full">Mettre à jour les informations</ion-button>
+    <ion-button expand="full" (click)="update()">Mettre à jour les informations</ion-button>
 </ion-footer>
