--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,7 @@
         <ion-label>
             <div class="name">Email</div>
             <div class="">
-                <ion-input [(ngModel)]="loginForm.email" type="" placeholder="Votre email"></ion-input>
+                <ion-input [(ngModel)]="loginForm.email" type="email" placeholder="Votre email"></ion-input>
             </div>
         </ion-label>
     </ion-item>
@@ -18,7 +18,7 @@
         <ion-label>
             <div class="name">Mot de passe</div>
             <div class="">
-                <ion-input [(ngModel)]="loginForm.password" type="" placeholder="Votre mot de passe"></ion-input>
+                <ion-input [(ngModel)]="loginForm.password" type="password" placeholder="Votre mot de passe"></ion-input>
             </div>
         </ion-label>
     </ion-item>
@@ -45,4 +45,11 @@
                 nouveau
                 compte !</span> </div>
     </div>
+
+    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+        <ion-fab-button color="black" (click)="backHome()">
+            <ion-icon name="home-outline"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
+
 </ion-content>
