--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -6,9 +6,9 @@
 <ion-content>
     <div class="profile_div ion-text-center">
         <div class="img_div">
-            <img src="../../assets/images/profile.png" class="user_img" height="111px" width="111px">
+            <img *ngIf="haveProfileIMG()" src="{{user?.profile_img?.url}}" class="user_img" height="111px" width="111px">
             <img src="../../assets/images/back_img.svg" class="back_img">
-            <img src="../../assets/images/round.svg" class="camera_img" height="35px" width="35px">
+            <img src="../../assets/images/round.svg" class="camera_img" height="35px" width="35px" (click)="uploadImg()">
             <svg xmlns="http://www.w3.org/2000/svg" width="15.002" height="12.502" viewBox="0 0 15.002 12.502">
                 <g id="photo-camera" transform="translate(0 0)">
                     <g id="Group_120" data-name="Group 120" transform="translate(0 0)">
@@ -28,11 +28,14 @@
                 </g>
             </svg>
         </div>
-        <p class="name">Amelia Addison</p>
-        <p class="joining">Membre depuis janvier 2021</p>
+        <p class="name">{{user.username}}</p>
+        <p class="joining">Membre depuis {{dateSign | date:'MMMM yyyy'}}</p>
     </div>
     <ion-item lines="none" (click)="editProfile()">
         <div>Editer le profil</div>
+    </ion-item>
+    <ion-item lines="none" (click)="changePassword()">
+        <div>Changer le mot de passe</div>
     </ion-item>
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="shareWith()">
@@ -57,10 +60,6 @@
     <div class="border_bottom"></div>
     <ion-item lines="none" (click)="logout()">
         <div>Déconnexion</div>
-    </ion-item>
-    <div class="border_bottom"></div>
-    <ion-item lines="none">
-        <div><span>Supprimer le compte</span></div>
     </ion-item>
     <div class="border_bottom"></div>
 </ion-content>
