--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,8 @@
                 <ion-icon src="../../assets/images/calendar.svg"></ion-icon>
             </ion-tab-button>
             <ion-tab-button tab="profile">
-                <img src="../../assets/images/profile.png" height="22px" width="22px" style="border-radius: 10px;">
+                <ion-icon name="person-sharp"></ion-icon>
+                <!--<img src="../../assets/images/profile.png" height="22px" width="22px" style="border-radius: 10px;">-->
             </ion-tab-button>
         </ion-tab-bar>
     </ion-tabs>
