--- a/src/app/give-rating/give-rating.page.html
+++ b/src/app/give-rating/give-rating.page.html
@@ -21,8 +21,7 @@
     <div class="experience">
         <p class="question">Comment était ton expérience?</p>
         <p class="answer">
-            <ion-textarea rows="6" cols="30"
-                placeholder="Loipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et">
+            <ion-textarea rows="6" cols="30" [(ngModel)]="comment" placeholder="">
             </ion-textarea>
         </p>
     </div>
