--- a/src/app/location/location.page.html
+++ b/src/app/location/location.page.html
@@ -10,7 +10,7 @@
     <div class="scroll-container">
         <div class="scroll-div" *ngFor="let item of salons"(click)="details(item)">
             <ion-item lines="none" >
-                <img slot="start" class="salon_img" src="{{ item?.img }}">
+                <img slot="start" class="salon_img" src="http://157.230.232.108{{ item?.Logo?.url }}">
                 <ion-label>
                     <p class="salon_name">{{ item?.name }}</p>
                     <p class="address">{{ item?.address }}</p>
@@ -19,7 +19,7 @@
                             <h3 class="rate_h">
                                 <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'">
                                 </ion-icon>
-                                <span class="ion-margin-bottom"> 5.0</span>
+                                <span class="ion-margin-bottom">{{ item.rate }}</span>
                                 <img class="circle_icon" src="../../assets/images/circle.svg" height="6px" width="6px">
                                 <span class="ion-text-right"> 2.0 </span>
                             </h3>
