--- a/src/app/salon-profile/salon-profile.page.html
+++ b/src/app/salon-profile/salon-profile.page.html
@@ -100,18 +100,14 @@
         </div>
       </div>
       <div [hidden]="select !='review'">
-        <ion-card mode="ios ">
-          <ion-card-content>
-            <canvas #barChart></canvas>
-          </ion-card-content>
-        </ion-card>
+
         <div class="review_head ion-padding-start ion-padding-bottom">
-          Total Review (810)
+          Total avis ({{reviews.length}})
         </div>
 
-        <ion-row class="ion-padding-top ion-margin-bottom" *ngFor="let item of review ">
+        <ion-row class="ion-padding-top ion-margin-bottom" *ngFor="let item of reviews ">
           <ion-col size="3" class="ion-no-padding ion-padding-start">
-            <img src="{{ item?.img }}" height="35px" width="35px" /><br /><span class="rate_div">
+            <img src="{{ item?.user?.img }}" height="35px" width="35px" /><br /><span class="rate_div">
               <img class="star_img" src="../../assets/images/star.svg " height="11px " width="11px " />
               {{ item?.rate }}
             </span>
@@ -119,10 +115,10 @@
           <ion-col size="9" class="details_div ion-padding-end ion-padding-start">
             <ion-label>
               <p class="name ion-no-margin">
-                {{ item?.name }}<span class="ion-float-right">
-                  {{ item?.time }}</span>
+                {{ item.user }}<span class="ion-float-right">
+                  {{ item.date | date:'dd-MM-yyyy HH:mm' }}</span>
               </p>
-              <p class="detail ion-no-margin">{{ item?.desc }}</p>
+              <p class="detail ion-no-margin">{{ item?.content }}</p>
             </ion-label>
           </ion-col>
         </ion-row>
