besoin de changement

--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -8,7 +8,7 @@
         <ion-title mode="ios">Ticket de paiement</ion-title>
     </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content *ngIf="AppointType=='Salon'">
     <div class="detail_div">
         <img class="salon_img" src="http://157.230.232.108{{ salon?.Logo?.url }}" slot="start"><br>
         <ion-label>
@@ -70,8 +70,66 @@
         </div>
     </div>
 </ion-content>
-<ion-footer class="ion-no-border">
 
+<ion-content *ngIf="AppointType=='Barber'">
+
+    <div class="main_head ion-padding-start">Rendez-vous avec
+    </div>
+    <ion-item lines="none">
+        <img slot="start" class="emp_img"  src="http://157.230.232.108{{ emp?.Photo?.url }}">
+        <ion-label>{{barber.name}}</ion-label>
+
+    </ion-item>
+    <div class="border_bottom"></div>
+    <div class="main_head ion-padding-start">Adresse du rendez-vous
+    </div>
+    <div class="time ion-padding-start">{{ address }}</div>
+    <div class="border_bottom"></div>
+    <div class="main_head ion-padding-start">Heure de rendez-vous
+    </div>
+    <div class="time ion-padding-start">{{date  | date:'dd-MM-yyyy HH:mm' }}</div>
+    <div class="border_bottom"></div>
+    <div class="main_head ion-padding-start">Services sélectionnés<!--<span class="ion-float-end ion-padding-end" (click)="addNew()">+Ajouter un nouveau service</span>-->
+    </div>
+    
+    <ion-row class="ion-padding-start" *ngFor="let service of serviceSelect">
+        <ion-col size="9" class="service_name ion-no-padding">{{service.name}}<br><span>facial</span></ion-col>
+        <ion-col size="2" class="price ion-no-padding">{{service.price}}€</ion-col>
+        <!--<ion-col size="1" class="ion-no-padding" (click)="removeService(service)"><img src="../../assets/images/minus.svg" height="18px" width="18px">
+        </ion-col>-->
+    </ion-row>
+    
+    <div class="border_bottom"></div>
+    <div class="main_head ion-padding-start">Détails de paiement
+    </div>
+    <ion-row class="ion-padding-start">
+        <ion-col size="10" class="service_name ion-no-padding">Facture totale</ion-col>
+        <ion-col size="2" class="price ion-no-padding">{{price}}€</ion-col>
+    </ion-row>
+    <ion-row class="ion-padding-start">
+        <ion-col size="10" class="service_name ion-no-padding">Service Charge</ion-col>
+        <ion-col size="2" class="price ion-no-padding">{{serviceCharge}}€</ion-col>
+    </ion-row>
+    <div class="main_head ion-padding-start ion-padding-top">Grand Total<span class="total ion-float-end ion-padding-end">{{ totalPrice }}€</span>
+    </div>
+    <div class="border_bottom"></div>
+    <div class="main_head ion-padding-start ">Sélectionnez le mode de paiement
+    </div>
+    <div class="payment_method ion-margin-horizontal">
+        <div class="pay_div" >
+            <div *ngFor="let pay of payment"><img src="{{pay?.icon}}" height="22px" width="22px">
+                <p>{{pay.name}}</p>
+                <label class="container">
+                    <input type="radio" name="radio" value="{{pay.name}}" [(ngModel)]='paymentWith'>
+                    <span class="checkmark"></span>
+                </label>
+            </div>
+        </div>
+    </div>
+
+</ion-content>
+
+<ion-footer class="ion-no-border">
     <ion-row>
         <ion-col size="6">
             <div class="total ion-text-left ion-margin-start ion-margin-top">Total :{{ totalPrice }}€</div>
@@ -80,6 +138,4 @@
             <ion-button expand="block" (click)="makePayment()">Valider le paiement</ion-button>
         </ion-col>
     </ion-row>
-
-
 </ion-footer>
