--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -67,6 +67,6 @@
     <p class="ion-padding-bottom ion-padding-start ion-padding-end">
         Vous n'êtes pas connecté veuillez vous connecter.
     </p>
-    <ion-button color="danger" expand="full" (click)="login()"> </ion-button>
-    <ion-button color="danger" expand="full" (click)="register()"> </ion-button>
+    <ion-button color="danger" expand="full" (click)="login()">Se connecter</ion-button>
+    <ion-button color="danger" expand="full" (click)="register()">S'inscrire</ion-button>
 </ion-content>
