--- a/src/app/appointment/appointment.page.html
+++ b/src/app/appointment/appointment.page.html
@@ -7,8 +7,11 @@
             <ion-segment-button mode="md" value="upcoming">A venir
                 <div *ngIf="selectAppointment == 'upcoming'" class="seg-button"></div>
             </ion-segment-button>
-            <ion-segment-button mode="md" value="past">Passer
+            <ion-segment-button mode="md" value="past">Complété
                 <div *ngIf="selectAppointment == 'past'" class="seg-button2"></div>
+            </ion-segment-button>
+            <ion-segment-button mode="md" value="cancel">Annuler
+                <div *ngIf="selectAppointment == 'cancel'" class="seg-button3"></div>
             </ion-segment-button>
         </ion-segment>
     </div>
@@ -22,8 +25,9 @@
                         <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
                     </ion-thumbnail>
                     <ion-label>
-                        <p class="salon_name">{{ item.salon?.name }}</p>
-                        <p class="address">{{ item.salon?.address }}</p>
+                        <p *ngIf="item?.type=='Salon'" class="salon_name">{{ item.salon?.name }}</p>
+                        <p *ngIf="item?.type=='Barber'" class="salon_name">{{ item.barber?.name }}</p>
+                        <p *ngIf="item?.type=='Salon'" class="address">{{ item.salon?.address }}</p>
                         <div class="rate_div">
                             <div class="bottom --flex-row-j!sb">
                                 <h3 class="rate_h">
@@ -40,8 +44,8 @@
                     </ion-label>
                 </ion-item>
                 <hr>
-                <p class="date">{{ item?.appointment_date  | date:'dd-MM-yyyy HH:mm' }}<span class="get_direction ion-float-right" (click)="direction(item.salon)">Voir
-                        sur la carte</span>
+                <p class="date">{{ item?.day  | date:'dd-MM-yyyy HH:mm' }}
+                    <span *ngIf="item?.type=='Salon'" class="get_direction ion-float-right" (click)="direction(item.salon)">Voir sur la carte</span>
                 </p>
             </div>
         </div>
@@ -74,6 +78,7 @@
                 </p>
             </div>
         </div>
+        <div *ngSwitchCase="'cancel'"></div>
     </div>
 </ion-content>
 <ion-content *ngIf='!isLog()' class="ion-text-center">
