--- a/src/app/appointment/appointment.page.html
+++ b/src/app/appointment/appointment.page.html
@@ -25,9 +25,9 @@
                         <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
                     </ion-thumbnail>
                     <ion-label>
-                        <p *ngIf="item?.type=='Salon'" class="salon_name">{{ item.salon?.name }}</p>
-                        <p *ngIf="item?.type=='Barber'" class="salon_name">{{ item.barber?.name }}</p>
-                        <p *ngIf="item?.type=='Salon'" class="address">{{ item.salon?.address }}</p>
+                        <p *ngIf="item?.type=='salon'" class="salon_name">{{ item?.salon?.name }}</p>
+                        <p *ngIf="item?.type=='barber'" class="salon_name">{{ item?.barber?.name }}</p>
+                        <p *ngIf="item?.type=='salon'" class="address">{{ item?.salon?.address }}</p>
                         <div class="rate_div">
                             <div class="bottom --flex-row-j!sb">
                                 <h3 class="rate_h">
@@ -45,7 +45,7 @@
                 </ion-item>
                 <hr>
                 <p class="date">{{ item?.day  | date:'dd-MM-yyyy HH:mm' }}
-                    <span *ngIf="item?.type=='Salon'" class="get_direction ion-float-right" (click)="direction(item.salon)">Voir sur la carte</span>
+                    <span *ngIf="item?.type=='salon'" class="get_direction ion-float-right" (click)="direction(item.salon)">Voir sur la carte</span>
                 </p>
             </div>
         </div>
@@ -56,8 +56,9 @@
                         <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
                     </ion-thumbnail>
                     <ion-label>
-                        <p class="salon_name">{{ item.salon?.name }}</p>
-                        <p class="address">{{ item.salon?.address }}</p>
+                        <p *ngIf="item?.type=='salon'" class="salon_name">{{ item?.salon?.name }}</p>
+                        <p *ngIf="item?.type=='barber'" class="salon_name">{{ item?.barber?.name }}</p>
+                        <p *ngIf="item?.type=='salon'" class="address">{{ item?.salon?.address }}</p>
                         <div class="rate_div">
                             <div class="bottom --flex-row-j!sb">
                                 <h3 class="rate_h">
@@ -74,11 +75,45 @@
                     </ion-label>
                 </ion-item>
                 <hr>
-                <p class="date">{{ item?.appointment_date  | date:'dd-MM-yyyy HH:mm' }}<span class="ion-float-right" (click)="rating(item.salon?.id)">Donnez une note</span>
+                <p class="date">{{ item?.day  | date:'dd-MM-yyyy HH:mm' }}
+                    <span *ngIf="!item?.alreadyGiveReview" class="ion-float-right" (click)="rating(item.salon?.id,item.id)">Donnez une note</span>
+                    <span *ngIf="item?.alreadyGiveReview" class="ion-float-right"> {{item.rate}}
+                        <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'"></ion-icon>
+                    </span>
                 </p>
             </div>
         </div>
-        <div *ngSwitchCase="'cancel'"></div>
+        <div *ngSwitchCase="'cancel'">
+            <div class="salon-container" *ngFor="let item of cancel">
+                <ion-item lines="none" class="ion-no-padding" (click)="detail(item)">
+                    <ion-thumbnail>
+                        <img src="http://157.230.232.108{{ item.salon?.Logo?.url }}" height="80px" width="80px">
+                    </ion-thumbnail>
+                    <ion-label>
+                        <p *ngIf="item?.type=='salon'" class="salon_name">{{ item?.salon?.name }}</p>
+                        <p *ngIf="item?.type=='barber'" class="salon_name">{{ item?.barber?.name }}</p>
+                        <p *ngIf="item?.type=='salon'" class="address">{{ item?.salon?.address }}</p>
+                        <div class="rate_div">
+                            <div class="bottom --flex-row-j!sb">
+                                <h3 class="rate_h">
+                                    <ion-icon name="star" [ngClass]="rate >= 1 ? 'yellow-star' :'gray-star'">
+                                    </ion-icon>
+                                    <span class="ion-margin-bottom">4.1</span>
+                                    <img class="circle_icon" src="../../assets/images/circle.svg" height="6px"
+                                        width="6px">
+                                    <span class="ion-text-right">1.6</span>
+                                </h3>
+
+                            </div>
+                        </div>
+                    </ion-label>
+                </ion-item>
+                <hr>
+                <p class="date">{{ item?.day  | date:'dd-MM-yyyy HH:mm' }}
+                    <span class="get_direction ion-float-right" >Annuler</span>
+                </p>
+            </div>
+        </div>
     </div>
 </ion-content>
 <ion-content *ngIf='!isLog()' class="ion-text-center">
