--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,6 +22,11 @@
             </div>
         </ion-label>
     </ion-item>
+    <div class="error-log ion-text-center ion-padding-start">
+        <div> 
+            <span center >{{error}}</span>
+        </div>
+    </div>
     <div class="forgot_div ion-text-center">
         <!-- <div class="remember ion-text-left ion-padding-start">
             <div (click)="change()"> <img class="check ion-margin-start" [src]="check">Remember Me <span
@@ -29,9 +34,9 @@
                     Password?</span></div>
         </div> -->
         <div class="remember ion-text-center ion-padding-start">
-            <div> <span center (click)="forgot()">Vous avez
-                    oublié
-                    votre mot de passe ?</span></div>
+            <div> 
+                <span center (click)="forgot()">Vous avez oublié votre mot de passe ?</span>
+            </div>
         </div>
     </div>
     <div>
@@ -41,15 +46,9 @@
     </div>
 
     <div class="ion-text-center" padding>
-        <div class="message">Pas encore de compte ? <span class="createNew" (click)="register()">Créer un
-                nouveau
-                compte !</span> </div>
+        <div class="message">Pas encore de compte ? 
+            <span class="createNew" (click)="register()">Créer un nouveau compte !</span> 
+        </div>
     </div>
-
-    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-        <ion-fab-button color="black" (click)="backHome()">
-            <ion-icon name="home-outline"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
 
 </ion-content>
