--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -46,6 +46,12 @@ ion-content {
         color: var(--ion-black);
         font-family: var(--bold-font);
     }
+    .error-log {
+        color: red;
+        font-family: var(--regular-font);
+        font-style: italic;
+        font-size: 13px;
+    }
     .forgot_div {
         padding-left: 14px;
         padding-right: 20px;
