--- a/src/app/change-password/change-password.page.html
+++ b/src/app/change-password/change-password.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content>
     <div class="ion-text-center note_div">
-        Set your new password and forgot old one
+        Définissez votre nouveau mot de passe et avez oublié l'ancien
     </div>
     <ion-item lines="none">
         <div slot="start">
