--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -30,7 +30,7 @@
     <div class="border_bottom"></div>
     <div class="main_head ion-padding-start">Heure de rendez-vous
     </div>
-    <div class="time ion-padding-start">{{date  | date:'dd-MM-yyyy HH:mm' }}</div>
+    <div class="time ion-padding-start">{{date  | date:'dd-MM-yyyy' }} à {{date  | date:'HH:mm' }}</div>
     <div class="border_bottom"></div>
     <div class="main_head ion-padding-start">Services sélectionnés<!--<span class="ion-float-end ion-padding-end" (click)="addNew()">+Ajouter un nouveau service</span>-->
     </div>
