--- a/src/app/filter/filter.page.html
+++ b/src/app/filter/filter.page.html
@@ -86,6 +86,6 @@
   </ion-range>
 </ion-content>
 <ion-footer class="ion-no-border">
-  <ion-button mode="md" class="apply" (click)="closeModal()">Annueler</ion-button>
+  <ion-button mode="md" class="apply" (click)="reset()">Reset</ion-button>
   <ion-button mode="md" class="apply" (click)="setFiltre()">Valider</ion-button>
 </ion-footer>
