--- a/src/app/date-time/date-time.page.html
+++ b/src/app/date-time/date-time.page.html
@@ -1,45 +1,19 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="salon-profile" text="" mode="md">
+            <ion-back-button defaultHref="day" text="" mode="md">
                 <img src="../../assets/images/back.svg">
             </ion-back-button>
         </ion-buttons>
-        <ion-title mode="ios">Mon Rendez-vous</ion-title>
+        <ion-title mode="ios">Rendez-vous</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div class="main_head ion-padding-start ion-padding-top ion-padding-bottom">Sélectionnez le jour
-        <div class="ion-padding-top ion-padding-start ion-padding-end">
-            <ion-calendar [(ngModel)]="date" (click)="onChange($event)" [type]="type" [format]="'DD-MM-YYYY'">
-            </ion-calendar>
-        </div>
-    </div>
-
-    <div class="main_head ion-padding-start ion-padding-bottom">Sélectionnez l'heure
-    </div>
-    <div class="ion-padding-horizontal">
-        <div>
-            <ion-row>
-                <div *ngIf="time?.length == 0" class="main_head ion-justify-content-center ion-margin-top">Pas encore
-                    d'horaire
-                </div>
-                <ion-col size="3" *ngFor="let slot of time">
-                    <div class="time-slot" [ngClass]="selectTime == slot.start_time ? 'active' : 'segment_btn'"
-                        (click)="activeSlot(slot.start_time,slot.hours);">
-                        {{ slot.start_time }}
-
-                    </div>
-                </ion-col>
-            </ion-row>
-        </div>
+    <div class="ion-padding-top ion-padding-start ion-padding-end">
+        <ion-calendar locale="fr" [(ngModel)]="date" (click)="onChange($event)" [type]="type" [format]="'DD-MM-YYYY'">
+        </ion-calendar>
     </div>
 </ion-content>
 <ion-footer class="ion-no-border">
-    <ion-item lines="none">
-        <ion-label>
-            <p class="detail">{{dateAff}}</p>
-        </ion-label>
-        <ion-button slot="end" expand="block" (click)="continue()">Continue</ion-button>
-    </ion-item>
+    <ion-button color="danger"  expand="full" (click)="continue()">continuer</ion-button>
 </ion-footer>
